--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -1,65 +1,63 @@
-# Additional translations at https://github.com/heartcombo/devise/wiki/I18n
-
-en:
+ja:
   devise:
     confirmations:
-      confirmed: "Your email address has been successfully confirmed."
-      send_instructions: "You will receive an email with instructions for how to confirm your email address in a few minutes."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes."
+      confirmed: "メールアドレスが正常に確認されました。"
+      send_instructions: "数分以内にメールアドレスの確認方法に関する指示が記載されたメールが送信されます。"
+      send_paranoid_instructions: "もしメールアドレスがデータベースに存在する場合は、数分以内にメールアドレスの確認方法に関する指示が記載されたメールが送信されます。"
     failure:
-      already_authenticated: "You are already signed in."
-      inactive: "Your account is not activated yet."
-      invalid: "Invalid %{authentication_keys} or password."
-      locked: "Your account is locked."
-      last_attempt: "You have one more attempt before your account is locked."
-      not_found_in_database: "Invalid %{authentication_keys} or password."
-      timeout: "Your session expired. Please sign in again to continue."
-      unauthenticated: "You need to sign in or sign up before continuing."
-      unconfirmed: "You have to confirm your email address before continuing."
+      already_authenticated: "すでにサインインしています。"
+      inactive: "アカウントはまだ有効化されていません。"
+      invalid: "無効な%{authentication_keys}またはパスワードです。"
+      locked: "アカウントはロックされています。"
+      last_attempt: "アカウントがロックされる前に、あと1回の試行が可能です。"
+      not_found_in_database: "無効な%{authentication_keys}またはパスワードです。"
+      timeout: "セッションが期限切れです。続行するにはもう一度サインインしてください。"
+      unauthenticated: "続行する前にサインインまたはサインアップしてください。"
+      unconfirmed: "続行する前にメールアドレスを確認する必要があります。"
     mailer:
       confirmation_instructions:
-        subject: "Confirmation instructions"
+        subject: "確認指示"
       reset_password_instructions:
-        subject: "Reset password instructions"
+        subject: "パスワードリセット指示"
       unlock_instructions:
-        subject: "Unlock instructions"
+        subject: "アンロック指示"
       email_changed:
-        subject: "Email Changed"
+        subject: "メールアドレス変更"
       password_change:
-        subject: "Password Changed"
+        subject: "パスワード変更"
     omniauth_callbacks:
-      failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
-      success: "Successfully authenticated from %{kind} account."
+      failure: "%{kind}からの認証に失敗しました。理由: \"%{reason}\"。"
+      success: "%{kind}アカウントから正常に認証されました。"
     passwords:
-      no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
-      send_instructions: "You will receive an email with instructions on how to reset your password in a few minutes."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes."
-      updated: "Your password has been changed successfully. You are now signed in."
-      updated_not_active: "Your password has been changed successfully."
+      no_token: "パスワードリセットメールからこのページにアクセスする必要があります。パスワードリセットメールからアクセスしている場合は、提供された完全なURLを使用してください。"
+      send_instructions: "数分以内にパスワードをリセットするための指示が記載されたメールが送信されます。"
+      send_paranoid_instructions: "もしメールアドレスがデータベースに存在する場合は、数分以内にパスワード復旧リンクがメールアドレスに送信されます。"
+      updated: "パスワードが正常に変更されました。現在サインイン中です。"
+      updated_not_active: "パスワードが正常に変更されました。"
     registrations:
-      destroyed: "Bye! Your account has been successfully cancelled. We hope to see you again soon."
-      signed_up: "Welcome! You have signed up successfully."
-      signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
-      signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
-      signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please follow the link to activate your account."
-      update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirmation link to confirm your new email address."
-      updated: "Your account has been updated successfully."
-      updated_but_not_signed_in: "Your account has been updated successfully, but since your password was changed, you need to sign in again."
+      destroyed: "さようなら！アカウントは正常にキャンセルされました。またのご利用をお待ちしています。"
+      signed_up: "ようこそ！正常にサインアップしました。"
+      signed_up_but_inactive: "正常にサインアップしました。しかし、アカウントがまだ有効化されていないためサインインできません。"
+      signed_up_but_locked: "正常にサインアップしました。しかし、アカウントがロックされているためサインインできません。"
+      signed_up_but_unconfirmed: "確認リンクが記載されたメッセージがメールアドレスに送信されました。リンクをフォローしてアカウントを有効化してください。"
+      update_needs_confirmation: "アカウントは正常に更新されましたが、新しいメールアドレスを確認する必要があります。メールをチェックし、新しいメールアドレスの確認リンクをフォローしてください。"
+      updated: "アカウントが正常に更新されました。"
+      updated_but_not_signed_in: "アカウントは正常に更新されましたが、パスワードが変更されたため、もう一度サインインする必要があります。"
     sessions:
-      signed_in: "Signed in successfully."
-      signed_out: "Signed out successfully."
-      already_signed_out: "Signed out successfully."
+      signed_in: "正常にサインインしました。"
+      signed_out: "正常にサインアウトしました。"
+      already_signed_out: "すでにサインアウトしています。"
     unlocks:
-      send_instructions: "You will receive an email with instructions for how to unlock your account in a few minutes."
-      send_paranoid_instructions: "If your account exists, you will receive an email with instructions for how to unlock it in a few minutes."
-      unlocked: "Your account has been unlocked successfully. Please sign in to continue."
+      send_instructions: "数分以内にアカウントのアンロック方法に関する指示が記載されたメールが送信されます。"
+      send_paranoid_instructions: "もしアカウントが存在する場合、数分以内にアンロック方法に関する指示が記載されたメールが送信されます。"
+      unlocked: "アカウントは正常にアンロックされました。続行するにはサインインしてください。"
   errors:
     messages:
-      already_confirmed: "was already confirmed, please try signing in"
-      confirmation_period_expired: "needs to be confirmed within %{period}, please request a new one"
-      expired: "has expired, please request a new one"
-      not_found: "not found"
-      not_locked: "was not locked"
+      already_confirmed: "は既に確認済みです。サインインを試みてください。"
+      confirmation_period_expired: "%{period}以内に確認する必要があります。新しいものをリクエストしてください。"
+      expired: "は期限切れです。新しいものをリクエストしてください。"
+      not_found: "が見つかりません。"
+      not_locked: "はロックされていません。"
       not_saved:
-        one: "1 error prohibited this %{resource} from being saved:"
-        other: "%{count} errors prohibited this %{resource} from being saved:"
+        one: "1つのエラーによりこの%{resource}を保存できませんでした："
+        other: "%{count}個のエラーによりこの%{resource}を保存できませんでした："
